
Version 2.0-7

o Fixed bug in handling of given.values argument to effect().

Version 2.0-8

o The S3 method print.summary.eff is now declared in NAMESPACE (as it should have been all along).

o Added CITATION.txt file (courtesy of Achim Zeileis).

o Version corresponding to John Fox, Jangman Hong (2009), Effect Displays in R for Multinomial and Proportional-Odds Logit Models: Extensions to the effects Package. Journal of Statistical Software, 32(1), 1-24 <http://www.jstatsoft.org/v32/i01/>.

O Fixed [pgk] markup in .Rd file cross-references.

Version 2.0-9

o Applied patches contributed by Ian Fellows to allow logical predictors and various coercions in model formulas to work properly.

o Fixed name of CITATION file (was CITATION.txt).

o Small changes to docs.

Version 2.0-10

o Backed out Ian Fellows's patches because of errors.

Version 2.0-11

o Small change to eliminate warnings produced in R 2.12.0.

o Added nrows and ncols argument to plot.efflist() (following suggstion by Michael Friendly).

o Small fix to docs.

Version 2.0-12

o plot.eff() and plot.effpoly now return an object, printed by print.plot.eff() (after a question by Michael Friendly).

o New effect.gls() method, various changes for compatibility (after a question by Oriol Verdeny Vilalta).

o effect.lm() now stores the covariance matrix of the effects (after a question by Bernhard Kaess).

Version 2.0-13

o effect.multinom() and effect.polr() now use update() to refit the model rather than calling multinom() or polr() directly; update for effect.multinom() sets trace=FALSE (after suggestions by David Armstrong).

o Added [.efflist method (after a question by Andreas Roesch).

Version 2.1-0

o added support for 'mer' objects from lme4 and 'lme' objects from 'nlme'.  Added 'rotx', 'roty' and 'grid' arguments to the plot methods.

Version 2.1-1

o plot.effpoly() now honors ylim argument when no confidence intervals are plotted (fixing problem reported by Achim Zeileis).