@@ -1,6 +1,6 @@
 Package: effects
 Version: 2.1-1
-Date: 2011/08/07
+Date: 2011/09/24
 Title: Effect Displays for Linear, Generalized Linear, Multinomial-Logit, Proportional-Odds Logit Models and mixed-effects models
 Author: John Fox <jfox@mcmaster.ca>, Sanford Weisberg, and Jangman Hong. We are grateful to Robert Andersen, David Firth, and 
   Michael Friendly, for various suggestions.
